When adding particle system to faces "without normal" blender crashes. #32625

Closed
opened 2012-09-21 23:23:33 +02:00 by Jakub Zolcik · 6 comments

%%%Blender 2.63a

When you add particle system to object with faces, which has vertices in the way that there is no "actual/visible face" blender crashes.

Redo:
Add plane, move 2 corners of plane to other 2 corners. Add particle system. Crash. (Can't calculate normal?)%%%

%%%Blender 2.63a When you add particle system to object with faces, which has vertices in the way that there is no "actual/visible face" blender crashes. Redo: Add plane, move 2 corners of plane to other 2 corners. Add particle system. Crash. (Can't calculate normal?)%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Crash confirmed, Windows 7 x64, SVN 50826. %%%

%%%Crash confirmed, Windows 7 x64, SVN 50826. %%%

%%%I can confirm this crash. It happens when particles are emitted either from faces or volumes and are distributed using jitter. A fix for this is on it's way.%%%

%%%I can confirm this crash. It happens when particles are emitted either from faces or volumes and are distributed using jitter. A fix for this is on it's way.%%%

%%%As of revision 50831, this should be fixed. Please, confirm that the error is gone.

Here's the link to the commit mail: http://lists.blender.org/pipermail/bf-blender-cvs/2012-September/049999.html%%%

%%%As of revision 50831, this should be fixed. Please, confirm that the error is gone. Here's the link to the commit mail: http://lists.blender.org/pipermail/bf-blender-cvs/2012-September/049999.html%%%
Author

%%%I can confirm. No crash.%%%

%%%I can confirm. No crash.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32625
No description provided.